@@ -2,7 +2,7 @@ package depreport;
 
 import java.io.IOException;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.nio.file.StandardOpenOption;
 import java.util.ArrayList;
 import java.util.Collections;
@@ -17,7 +17,7 @@ public class UnusedDependenciesWriter {
   private List<String> unusedDependencies;
 
   public UnusedDependenciesWriter(String deprecatedFile, List<String> flatDepreport) throws IOException {
-    this.deprecated = Files.readAllLines(Paths.get(deprecatedFile));
+    this.deprecated = Files.readAllLines(Path.of(deprecatedFile));
     this.flatDepreport = flatDepreport;
     determineUnusedDependencies();
   }
@@ -32,7 +32,7 @@ public class UnusedDependenciesWriter {
   public void writeTo(String outputFile) throws IOException {
     unusedDependencies.add(0, HEADER);
     Files.write(
-      Paths.get(outputFile),
+      Path.of(outputFile),
       unusedDependencies,
       StandardOpenOption.CREATE,
       StandardOpenOption.WRITE,
